[gd_scene load_steps=6 format=3 uid="uid://c5tvs1gtvt2wi"]

[ext_resource type="Script" uid="uid://dhlofsrykfwxa" path="res://Scripts/UI/LandingPage.gd" id="1_5pwm3"]
[ext_resource type="Texture2D" uid="uid://w1rt6fs20h1t" path="res://Asset/UI/Play.png" id="2_v1kj3"]
[ext_resource type="Texture2D" uid="uid://brpod0jd7xr6b" path="res://Asset/UI/Settings.png" id="3_v3js6"]
[ext_resource type="PackedScene" path="res://Scenes/UI/MainMenu/SettingsDialog.tscn" id="4_5i1g2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xbj"]
bg_color = Color(0.176471, 0.494118, 0.627451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LandingPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pwm3")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6xbj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
texture_normal = ExtResource("2_v1kj3")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture_normal = ExtResource("3_v3js6")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsDialog" parent="." instance=ExtResource("4_5i1g2")]
visible = false
layout_mode = 1
